[300](https://github.com/avbravo/jettraDB/issues/300)